--- a/src/index.html
+++ b/src/index.html
@@ -117,8 +117,20 @@
         </div>
     </section>
 
-
-
+    <!--HOME HEADING SECTION-->
+    <section id="home-heading" class="p-5">
+        <div class="dark-overlay">
+            <div class="row">
+                <div class="col">
+                    <div class="container pt-5">
+                        <h1>Are You Ready to Get Started?</h1>
+                        <p class="d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate blanditiis nostrum quas praesentium,
+                            ex sapiente voluptates quae obcaecati aut autem.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
