--- a/src/index.html
+++ b/src/index.html
@@ -132,6 +132,24 @@
         </div>
     </section>
 
+    <!--INFO SECTION-->
+    <section id="info" class="py-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 align-self-center">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur cumque unde blanditiis adipisci necessitatibus
+                        labore obcaecati dignissimos animi assumenda aspernatur.</p>
+                    <a href="Learn More" class="btn btn-outline-danger btn-lg">Learn More</a>
+
+                </div>
+                <div class="col-md-6">
+                    <img src="img/laptop.png" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
