--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>Corporate Website</title>
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -166,6 +167,48 @@
         </div>
     </section>
 
+    <!--PHOTO GALLERY-->
+    <section id="gallery" class="py-5">
+        <div class="container">
+            <h1 class="text-center">Photo Gallery</h1>
+            <p class="text-center">Check Out Our Photos</p>
+            <div class="row mb-4">
+                <div class="col-md-4">
+                    <a href="http://lorempixel.com/560/560/business/1" data-toggle="lightbox" data-gallery="img-gallery">
+                        <img src="http://lorempixel.com/400/400/business/1" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="http://lorempixel.com/560/560/business/2" data-toggle="lightbox" data-gallery="img-gallery">
+                        <img src="http://lorempixel.com/400/400/business/2" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="http://lorempixel.com/560/560/business/3" data-toggle="lightbox" data-gallery="img-gallery">
+                        <img src="http://lorempixel.com/400/400/business/3" class="img-fluid" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-md-4">
+                    <a href="http://lorempixel.com/560/560/business/4" data-toggle="lightbox" data-gallery="img-gallery">
+                        <img src="http://lorempixel.com/400/400/business/4" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="http://lorempixel.com/560/560/business/5" data-toggle="lightbox" data-gallery="img-gallery">
+                        <img src="http://lorempixel.com/400/400/business/5" class="img-fluid" alt="">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="http://lorempixel.com/560/560/business/6" data-toggle="lightbox" data-gallery="img-gallery">
+                        <img src="http://lorempixel.com/400/400/business/6" class="img-fluid" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!--VIDEO MODAL-->
     <div class="modal fade" id="videoModal">
         <div class="modal-dialog">
@@ -183,6 +226,7 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"></script>
 </body>
 
 </html>
