--- a/src/index.html
+++ b/src/index.html
@@ -230,6 +230,19 @@
         </div>
     </section>
 
+    <!--FOOTER-->
+
+    <footer id="main-footer" class="text-center p-4">
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p>Copyright 2018 &copy; Corporate Website</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!--VIDEO MODAL-->
     <div class="modal fade" id="videoModal">
         <div class="modal-dialog">
@@ -243,6 +256,7 @@
             </div>
         </div>
     </div>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
