--- a/src/about.html
+++ b/src/about.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/slick.css">
 </head>
 
 <body>
@@ -75,6 +77,110 @@
         </div>
     </section>
 
+    <!--ICON BOXES-->
+    <section id="icon-boxes" class="p-5">
+        <div class="container">
+            <div class="row mb-4">
+                <div class="col-md-4 mb-2">
+                    <div class="card bg-danger text-center text-white">
+                        <div class="card-body">
+                            <i class="fa fa-building"></i>
+                            <h3>Lorem Ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, odio.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-2">
+                    <div class="card bg-danger text-center text-white">
+                        <div class="card-body">
+                            <i class="fa fa-bullhorn"></i>
+                            <h3>Lorem Ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, odio.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-2">
+                    <div class="card bg-danger text-center text-white">
+                        <div class="card-body">
+                            <i class="fa fa-comments"></i>
+                            <h3>Lorem Ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, odio.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mb-4">
+                <div class="col-md-4 mb-2">
+                    <div class="card bg-danger text-center text-white">
+                        <div class="card-body">
+                            <i class="fa fa-clock-o"></i>
+                            <h3>Lorem Ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, odio.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-2">
+                    <div class="card bg-danger text-center text-white">
+                        <div class="card-body">
+                            <i class="fa fa-cc"></i>
+                            <h3>Lorem Ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, odio.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-2">
+                    <div class="card bg-danger text-center text-white">
+                        <div class="card-body">
+                            <i class="fa fa-coffee"></i>
+                            <h3>Lorem Ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, odio.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--TESTIMONIALS-->
+
+    <section id="testimonial-section" class="p4 bg-dark text-white">
+        <div class="container">
+            <h2 class="text-center">Testimonials</h2>
+            <div class="row">
+                <div class="col">
+                    <div class="slider">
+                        <div>
+                            <blockquote class="blockquote">
+                                <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, facere!</p>
+                                <footer class="blockquote-footer">John Doe From
+                                    <cite title="Company 1">Company 1</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                        <div>
+                            <blockquote class="blockquote">
+                                <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, facere!</p>
+                                <footer class="blockquote-footer">Mark Walalce From
+                                    <cite title="Company 2">Company 2</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                        <div>
+                            <blockquote class="blockquote">
+                                <p class="mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, facere!</p>
+                                <footer class="blockquote-footer">Megan Williams From
+                                    <cite title="Company 3">Company 3</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!--FOOTER-->
 
     <footer id="main-footer" class="text-center p-4">
@@ -93,8 +199,9 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/slick.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
