--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Edifier</a>
+            <a href="index.html" class="navbar-brand">Company Name</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navNavbar" aria-controls="navNavbar" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
